# SensibleSleep

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
sensiblesleep/: README.md  config.json  example.ipynb
sensiblesleep/data_generation/: README.md  data_config.json  data_generation.py
sensiblesleep/src/: model_functions.py  model_selection.py  plot_functions.py  utils.py
