[metadata]
name = sensiblesleep
version = 0.1.0
author = Cristiana Principato
author_email = cristiana.principato@gmail.com
description = A Bayesian model for learning sleep patterns from smartphone events
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crisprin17/SensibleSleep
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    pymc>=4.0
    numpy>=1.18.0
    pandas>=1.0.0
    matplotlib>=3.0.0
    arviz>=0.11.0
    plotly>=5.0.0
    seaborn>=0.11.0
    ipywidgets>=7.6.0
    graphviz>=0.16
    nbformat>=5.0.0
python_requires = >=3.8

[options.extras_require]
dev =
    black
    isort
    pytest

[options.package_data]
* = *.txt, *.rst, *.md
